--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <p>Список домашних работ</p>
-        <a href="./hw_01/index.html">HW_01</a>
-        <a href="./hw_02/index.html">HW_02</a>
+        <a href="./hw_01/index.html">HW_01</a><br>
+        <a href="./hw_02/index.html">HW_02</a><br>
         <a href="./hw_03/index.html">HW_03</a>
 </body>
 </html>
