--- a/hw_02/index.html
+++ b/hw_02/index.html
@@ -11,11 +11,11 @@
    <hr>
    <p align="left">A human mission to Mars has been the subject of science fiction since the 1880s, and of aerospace engineering and scientific proposals <b>since the late 1940s</b>. Plans include landing on Mars for exploration at a minimum, with some considering exploring its moons Phobos and Deimos. Longterm proposals have included sending settlers and starting terraforming of the planet.
 </p>
-<img src="mars.jpg">
+<img src="mars.jpg" alt="shuttle at mars">
    <h2>Exploration of Mars</h2>
    <p align="left">The exploration of Mars has been a goal of national space programs for decades. Conceptual work for missions that would involve human explorers has been ongoing since the <b>1950s</b>, with planned missions typically being stated as taking place anywhere between 10 and 30 years from the time they are drafted.
-    The list of <b>crewed</b> Mars mission plans shows the various mission proposals that have been put forth by multiple organizations and space agencies in this field of space exploration. Plans have varied from scientific expeditions, in which a small group (between two and eight astronauts) would visit Mars for a period of a few weeks or year, to a continuous presence (e.g. through research stations, colonization or other continuous humanization).[citation needed] Virtual visits to Mars, using haptic technologies, have also been proposed.[
-    In the 2010s, numerous US, European, and Asian agencies were developing proposals for human missions to Mars.[citation needed] In fiction, Mars is a frequent target of exploration and settlement in books, graphic novels, and films.
+    The list of <b>crewed</b> Mars mission plans shows the various mission proposals that have been put forth by multiple organizations and space agencies in this field of space exploration. Plans have varied from scientific expeditions, in which a small group (between two and eight astronauts) would visit Mars for a period of a few weeks or year, to a continuous presence (e.g. through research stations, colonization or other continuous humanization).[citation needed] Virtual visits to Mars, using haptic technologies, have also been proposed.
+    <i>In the 2010s</i>, numerous US, European, and Asian agencies were developing proposals for human missions to Mars.[citation needed] In fiction, Mars is a frequent target of exploration and settlement in books, graphic novels, and films.
     </p>
     <h2>Mars shuttles</h2>
     There are shuttles that was on Mars
