--- a/hw_03/index.html
+++ b/hw_03/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Cookies</title>
 </head>
 <body>
-    <p>Третья домашняя работа</p>
+    <div class="first-cookie">
+      <p>By clicking “Accept All Cookies”, you agree to the storing of cookies on your device to enhance site navigation, analyze site usage, and assist in our marketing efforts.</p>
+      <a href="#">Cookie Setting</a>
+      <button>Accept All Cookies</button>
+    </div>
+    <div class="second-cookie"></div>
+    <div class="third-cookie"></div>
+    <div class="fourth-cookie"></div>
+    <div class="fifth-cookie"></div>
+    <div class="sixth-cookie"></div>
+    <div class="seventh-cookie"></div>
+    <div class="eight-cookie"></div>
 </body>
 </html>
