--- a/hw_03/index.html
+++ b/hw_03/index.html
@@ -16,8 +16,10 @@
       <a href="#">Cookie Setting</a>
       <button>Accept All Cookies</button>
     </div>
-    <div class="second-cookie"></div>
-    <div class="third-cookie"></div>
+    <div class="second-cookie">
+    </div>
+    <div class="third-cookie">
+    </div>
     <div class="fourth-cookie"></div>
     <div class="fifth-cookie"></div>
     <div class="sixth-cookie"></div>
