add fucking homework_03

--- a/hw_03/index.html
+++ b/hw_03/index.html
@@ -17,13 +17,48 @@
       <button>Accept All Cookies</button>
     </div>
     <div class="second-cookie">
+      <img src="./img/image 11.svg" alt="notice">
+      <p>We use cookies to enhance your user experience. By continuing to visit this site you agree to <a href="#">our use of cookies.</a>
+      </p>
+      <img src="./img/image 10.svg" alt="cancel">
     </div>
     <div class="third-cookie">
+      <img src="./img/Vector.svg" alt="cookie">
+      <p>We use cookies to ensure that we give you the best experience on our website. <a href="#">Read cookies policies.</a>
+      </p>
+      <button class="decline-button">Decline</button>
+      <button class="allow-button">Allow</button>
     </div>
-    <div class="fourth-cookie"></div>
-    <div class="fifth-cookie"></div>
-    <div class="sixth-cookie"></div>
-    <div class="seventh-cookie"></div>
-    <div class="eight-cookie"></div>
+    <div class="fourth-cookie">
+      <p>App uses cookies to personalize your experience on our website. By continuing to use this site, you agree to our <a href="#">cookie policy.</a>
+      </p>
+      <button>Okay</button>
+    </div>
+    <div class="fifth-cookie">
+      <h3>
+        🍪 Cookie Notice
+      </h3>
+      <p>We use cookies to learn how you interact with our content, and show you relevant content and ads based on your browsing history. You can adjust your settings below. Here’s our <a href="#" class="link-policy">policy</a></p>
+      <a href="#" class="link-preference">Manage your preference</a>
+      <button>Accept</button>
+    </div>
+    <div class="sixth-cookie">
+      <h3>🍪 Cookie settings</h3>
+      <p>We use our own cookies so that we can show you this website and understand how you use them to improve the services we offer</p>
+      <button class="manage-cookie-button">Manage cookies</button>
+      <button class="accept-button">Accept all</button>
+    </div>
+    <div class="seventh-cookie">
+      <h3>
+        Cookies
+      </h3>
+      <p>We use cookies to ensure that we give you the best experience on our website.</p>
+      <button>Accept</button>
+    </div>
+    <div class="eight-cookie">
+      <p>We care about your data, and we'd love to use cookies to make your experience better.</p>
+      <a href="#">Privacy Policy</a>
+      <button>Accept</button>
+    </div>
 </body>
 </html>
