--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>Список домашних работ</p>
         <a href="./hw_01/index.html">HW_01</a><br>
         <a href="./hw_02/index.html">HW_02</a><br>
-        <a href="./hw_03/index.html">HW_03</a>
+        <a href="./hw_03/index.html">HW_03</a><br>
+        <a href="./hw_04/index.html">HW_04</a>
 </body>
 </html>
